# med-routing

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.grafana  Dockerfile.prometheus  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
audit/: decisions-2026-04-25.jsonl  decisions-2026-04-26.jsonl
data/: completion_cache.json  judge_cache.json  med_routing.db
data/backup-20260425-133358/: med_routing.db
data/datasets/: 1027814b17.json  113e11a573.json  4c2d392564.json  62146cd46d.json  7a55f9ee35.json  8b554e3e7f.json  c75cb475c1.json  f10566c211.json
demo_data/: clinical_eval_25.csv  clinical_eval_25.opus.json  clinical_eval_25_blank.csv
grafana/dashboards/: med_routing.json  med_routing_eval.json  med_routing_history.json
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: datasource.railway.yml  sqlite.yml
prometheus/: prometheus.railway.yml  prometheus.yml
reports/: pareto.json  pareto_real_subject.json
runs/: predictive_entropy_1777142332.jsonl  self_consistency_1777137244.jsonl  self_consistency_1777138162.jsonl  self_consistency_1777142256.jsonl  self_consistency_1777143480.jsonl  self_consistency_1777144169.jsonl  self_reported_1777142302.jsonl  semantic_entropy_1777146357.jsonl
src/med_routing/: audit.py  cache.py  cascade.py  config.py  datasets.py  feedback.py  fhir.py  metrics.py  nli.py  processors.py  replay.py  server.py  store.py  streaming_cascade.py
src/med_routing/eval/: aggregator.py  medmcqa.py  medqa.py  medquad.py  pareto.py  runner.py  scoring.py
src/med_routing/llm/: openai_client.py
src/med_routing/routers/: auto.py  base.py  learned.py  predictive_entropy.py  registry.py  routellm_router.py  self_consistency.py  self_reported.py  semantic_entropy.py  semantic_entropy_embed.py
src/med_routing/static/: datasets.html  index.html
src/med_routing/train/: collect.py  fit.py
tests/: conftest.py  test_aggregator.py  test_audit.py  test_auto.py  test_cascade.py  test_collect.py  test_compare.py  test_feedback.py  test_fhir.py  test_fit.py  test_freeform.py  test_learned_router.py  test_medqa_loader.py  test_pareto.py  test_predictive_entropy.py  test_replay.py  test_routellm.py  test_savings.py  test_self_consistency.py  test_self_reported.py  test_semantic_entropy.py  test_store.py
