[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "med-routing"
version = "0.1.0"
description = "Uncertainty-based LLM cascade for medical Q&A, with Prometheus + Grafana observability."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "Sonnet Xu", email = "sonnet@stanford.edu" }]

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openai>=1.30",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "cachetools>=5.3",
    "datasets>=2.18",
    "pyarrow>=15",
    "tqdm>=4.66",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
nli = [
    "transformers>=4.40",
    "torch>=2.2",
    "sentencepiece>=0.2",
]
routellm = [
    "routellm>=0.2",
]
learned = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "joblib>=1.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.4",
]

[project.scripts]
med-routing-server = "med_routing.server:main"
med-routing-eval = "med_routing.eval.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
med_routing = ["static/*.html", "static/*.css", "static/*.js"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py310"
